tdf#151700 Display native print panel even if there are no printers

Prevent the non-native LibreOffice PrintDialog from displaying by creating a fake printer if there are no printers. This will allow the LibreOffice printing code to proceed with native NSPrintOperation which will display the native print panel.

Change-Id: Iee13305520360b0165464889f0ee51b1207dd5ce
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143794
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>